Updated index.html from new branch

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-color: #f0f8ff;
+    background-color: hsl(336, 100%, 97%);
     text-align: center;
     padding: 50px;
 }
